# timecopilot

./: .gitignore  mkdocs.yml  pyproject.toml
docs/api/models/foundation/: models.md
docs/cookbooks/: AnalyseBenchmarks.ipynb
docs/examples/: finetuning.ipynb
experiments/PlanningAnalytics/src/: planning_analytics_loader.py  run_pa_experiment_matrix.py  run_timecopilot.py
experiments/gift-eval/: pyproject.toml
experiments/gift-eval/docs/: validation_report_patchtst_flowstate.md
experiments/gift-eval/docs/ensemble_comparison/: comparison_appendix.csv  comparison_avg_rank_by_term.csv  comparison_primary_metric_by_term.csv  comparison_summary.csv  comparison_summary.md  comparison_win_counts.csv  ensemble_comparison_report.md
experiments/gift-eval/src/: build_comparison_views.py  build_ensemble_report.py  build_leaderboard.py  build_validation_delta.py  run_timecopilot.py
tests/gift_eval/: test_ttm_forecaster.py
tests/models/: conftest.py
tests/models/foundation/: test_chronos.py  test_ttm.py  test_ttm_r3.py
timecopilot/gift_eval/: gluonts_predictor.py  ttm_forecaster.py
timecopilot/models/foundation/: __init__.py  chronos.py  flowstate.py  patchtst_fm.py  timesfm.py  tirex.py  ttm.py  ttm_r3.py  utils.py
