[project]
dependencies = [
  "modal>=1.0.5",
  "s3fs>=2023.12.1",
  "timecopilot",
  "typer>=0.16.0",
]
description = "TimeCopilot experiments for GIFT-Eval"
name = "gift-eval"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.2.0"

[tool.uv.sources]
timecopilot = { path = "../..", editable = true }
granite-tsfm = { git = "https://github.com/ibm-granite/granite-tsfm.git", rev = "ttm-r3-release-mq2" }
